--- a/TCS.html
+++ b/TCS.html
@@ -10,7 +10,7 @@
     <h1> <strong>TCS INDIA </strong> </h1>
     <h3>Welcome! To the official page of TCS INDIA PVT LIMITED</h3>
     <p>Tata Consultancy Services is a global leader in IT services, <br>  consulting & business solutions with a large network of innovation & delivery centers.</p>
-    <img src="TCS.png" height="300" width="300"  alt="There was supposed to be am image here">
+    <img src="https://d3bzyjrsc4233l.cloudfront.net/news/TCS.png" height="300" width="300"  alt="There was supposed to be am image here">
      <hr>
      <h4>Services Offered by us</h4>
      <ul>
